--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "opper-payment",
   "version": "1.0.0",
-  "dependencies": {}
+  "dependencies": {
+    "@supabase/supabase-js": "^2.0.0"
+  }
 }
