--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "opper-payment",
   "version": "1.0.0",
   "dependencies": {
-    "@supabase/supabase-js": "^2.0.0"
+    "@supabase/supabase-js": "^2.0.0",
+    "html2pdf.js": "^0.9.3"
   }
 }
